<?xml version="1.0"?>
<package format="2">
  <name>tf_visualizer</name>
  <version>0.0.0</version>
  <description>The tf_visualizer package</description>

  <maintainer email="amsl@todo.todo">amsl</maintainer>


  <license>TODO</license>




  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>tf2_msgs</build_depend>
  <!-- <build_depend>camera_apps_msgs</build_depend> -->

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2_msgs</exec_depend>
  <!-- <exec_depend>camera_apps_msgs</exec_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
